# esp-flasher-stm

./: .clang-format  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  bin2array.py
BSP/: .cproject
Firmware/: .cproject  .mxproject  CMakeLists.txt  Toolchain.cmake  esp_flasher_stm.cfg  esp_flasher_stm.ioc
Firmware/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
Firmware/Core/Inc/Binaries/: application_bin.h  bootloader_bin.h  partition_bin.h
Firmware/Core/Inc/Services/: EspFlasherService.h
Firmware/Core/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  sysmem.c  system_stm32f1xx.c  usart.c
Firmware/Core/Src/Binaries/: application_bin.c  bootloader_bin.c  partition_bin.c
Firmware/Core/Src/Services/: EspFlasherService.c
